--- a/app/views/intro_lessons/lessons/lesson_1.html.erb
+++ b/app/views/intro_lessons/lessons/lesson_1.html.erb
@@ -45,7 +45,7 @@
 
 <br>
 
-<%= link_to 'Are you ready?', intro_lessons_path(2), class: 'btn btn-danger btn-lg' %>
+<%= link_to 'Are you ready?', intro_lessons_path(2), class: 'btn btn-danger btn-lg btn-block' %>
 
 <br class = "clear">
 
