--- a/app/views/intro_lessons/lessons/lesson_3.html.erb
+++ b/app/views/intro_lessons/lessons/lesson_3.html.erb
@@ -13,7 +13,7 @@
 </p>
 
 <p>
-	It's also the language for the popular web framework Ruby on Rails. Which gets us into another topic:
+	It's also the language for the popular web framework <strong>Ruby on Rails</strong>. A <strong>web framework</strong> is different from a programming language. A web framework is a library or a collection of code that makes a coder's life easier when building web applications. A programming language is just a language, like English or Spanish. A web framework uses a programming language to create a collection of code that other coders can use to create web applications much easier.
 </p>
 
 <p><strong>Which framework should I learn?</strong></p>
