--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
       <div class = "content">
 
         <% if notice.present? %>
-          <p class="alert alert-info" style = "color:white;"><%= notice %></p>
+          <p class="alert alert-info"><%= notice %></p>
         <% end %>
         <% if alert.present? %>
-          <p class="alert alert-danger" style = "color:white;"><%= alert %></p>
+          <p class="alert alert-danger"><%= alert %></p>
         <% end %>
 
         <%= yield %>
