--- a/app/views/comments/_for_lesson.html.erb
+++ b/app/views/comments/_for_lesson.html.erb
@@ -12,6 +12,9 @@
 	<br>
 	<br>
 
+    <h3>All Questions</h3>
+    <hr>
+
 		<% forum_for_lesson.comments.where(lesson: lesson).order("created_at DESC").each do |comment| %>
 			<h4><%= link_to comment.title, forum_comment_path(comment.forum_id, comment.id) %> <span class = "comment_list">by <%= comment_owner(comment) %></span> <span class = "pull-right comment_list">Replies: <%= comment.replies.count %><%= link_to ' Delete', forum_comment_path(comment.forum_id, comment.id), method: :delete, data: { confirm: 'Are you sure?' } if current_user && current_user.admin %></span></h4>
 		<% end %>
