--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -12,6 +12,8 @@
 
 	<%= render partial: 'course', locals: {course: 'Ruby Core Training', course_name: 'Strengthen your Ruby skills by going through various coding challenges. Sharpening your thinking skills is crucial in becoming a developer.', available: true, course_link: ruby_core_path, course_access: 'ruby_core'} %>
 
+	<%= render partial: 'course', locals: {course: 'Instapost - Share your photos online', course_name: 'Create a clone of the popular Instagram application. You are going to be creating a more complex app than before! Get excited!', available: false } %>
+
 	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'With JavaScript, you can manipulate the web page in super fun ways.', available: false} %>
 
 	<%= render partial: 'course', locals: {course: 'Git/GitHub', course_name: 'Git and GitHub is used by the majority of web developers. Learn what it is and how you can utilize it to collaborate and implement version control.', available: false} %>
