--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -260,10 +260,12 @@
               <h5>Takehiro Mouri | Co-founder / Mentor</h5>
 
               <p style="font-size:16px;text-align:justify;">
-                Coding is awesome and my mission is to teach people how awesome it is. I work with a couple of start ups and help develop ideas into reality through web applications. I also won a few awards at a hackathon which was pretty fun. Other than coding, in my free time, I enjoy coding :) Lastly, I love momo.
+                Coding is awesome and my mission is to teach people how awesome it is. I work with a couple of start ups and help develop ideas into reality through web applications. I also won a few awards at a hackathon which was pretty fun. Other than coding, in my free time, I enjoy coding :) My favorite Nepalese food is Momo.
               </p>
 
               <a href="https://www.linkedin.com/in/takehiro-mouri-a3083487" target="_blank" class="pull-right"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
+
+              <a href="http://www.takehiromouri.com" target="_blank"><i class="fa fa-globe"></i> Personal Website</a>
             </div>
 
           </div>
