add update interval method

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,7 @@
+span.radio.inline {
+  display: inline;
+}
+
 #wrap {
   margin-bottom: 200px;
 }
@@ -30,11 +34,6 @@ footer {
 .hljs {
   padding: 0px 20px 20px !important;
 }
-
-/*p {
-  font-weight: 100;
-  font-size: 18px;
-}*/
 
 pre {
   white-space: pre-wrap;
