--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -1,22 +1,29 @@
-<h1><%= card.question %></h1>
-  
-<p><%= card.repetition_date %></p>
+<div class="question">
+  <h1><%= card.question %></h1>
+    
+  <p><%= card.repetition_date %></p>
 
-<form>
-  ​<textarea name="answer" rows="10" cols="70"></textarea><br>
-  <button type="button" class="btn btn-primary">Check Answer</button>
-</form>
+  <form>
+    ​<textarea rows="10" cols="70" id="answer"></textarea><br>
+    <button type="button" class="btn btn-primary">Check Answer</button>
+  </form>
+</div>
 
 <div class="check_answer">
+  <h1><%= card.question %></h1>
+  <p id="own_answer"></p>
   <p><%= card.answer %></p>
   <%= simple_form_for card, url: update_interval_path(card.id), method: :put do |f| %>
-    <%= f.input :quality_response, collection: 0..5, as: :radio_buttons, item_wrapper_class: 'inline', label: false %> 
+    <%= f.input :quality_response, collection: 0..5, as: :radio_buttons, item_wrapper_class: 'inline', label: false, required: true %> 
     <%= f.submit 'Submit', class: 'btn btn-primary' %>
   <% end %>
 </div>
 
 <script type="text/javascript">
 $('button').on('click', function(){
+  $('.question').toggle();
   $('.check_answer').toggle();
+  var own_answer = document.getElementById("answer").value;
+  $('#own_answer').text("Your answer: " + own_answer);
 })
 </script>
