--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -24,6 +24,10 @@
                     </li>
 
                     <li class="nav-item page-scroll">
+                      <%= link_to 'STUDY CARDS', study_path %>
+                    </li>
+
+                    <li class="nav-item page-scroll">
                       <%= link_to 'SETTINGS', edit_user_registration_path %>
                     </li>
 
