--- a/app/views/study/index.html.erb
+++ b/app/views/study/index.html.erb
@@ -1,3 +1,8 @@
-
-<%= render partial: 'cards/card', locals: { card: @cards.first } %>
-  
+<div class="col-xs-12 col-md-6 col-md-offset-3">
+  <% if @cards.empty? %>
+    <h3 class="text-center">Congratulations! You have no cards left today!</h3>
+    <h3 class="text-center"><%= link_to '>> Go to lessons', courses_path %></h3>
+  <% else %>
+    <%= render partial: 'cards/card', locals: { card: @cards.first } %>
+  <% end %>
+</div>
