--- a/app/views/study/index.html.erb
+++ b/app/views/study/index.html.erb
@@ -3,7 +3,7 @@
     <h3 class="text-center">Congratulations! You have no cards left today!</h3>
     <h3 class="text-center"><%= link_to '>> Go to lessons', courses_path %></h3>
   <% else %>
-    <h3>TECHRISE Training Module</h3>
+    <h1 class="text-center">TECHRISE Training Module</h1>
     <%= render partial: 'cards/card', locals: { card: @cards.first } %>
   <% end %>
 </div>
