--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -2,6 +2,13 @@ span.radio.inline {
   display: inline;
 }
 
+.devise_box {
+  padding: 50px;
+  border-radius: 3px;
+  box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2);
+  margin-bottom: 50px;
+}
+
 #wrap {
   margin-bottom: 200px;
 }
