--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -4,37 +4,48 @@
     }
 </style>
 
-<%= sanitize card.question %>
+<div class="devise_box">
+  <%= sanitize card.question %>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-       <h3 class="panel-title">Code Editor</h3>
+  <div class="panel panel-default">
+    <div class="panel-heading" style="background: #0F0F0F; color: white;">
+         <h3 class="panel-title">Code Editor</h3>
+    </div>
+    <div class="panel-body" style="background-color: #0F0F0F;">
+        <div id="editor">
+        </div>
+    </div>
   </div>
-  <div class="panel-body">
-      <div id="editor">
-      </div>
+  <button type="button" class="btn btn-primary">Check Answer</button>
+
+  <div class="check_answer">
+    <h2>Answer:</h2>
+    <%= sanitize card.answer %>
+
+    <h3>Rate your understanding <small>(0: I don't get this at all, 5: I'm a master)</small></h3>
+
+    <div style="margin: 30px auto 30px;display: table;">
+      <%= simple_form_for card, url: update_interval_path(card.id), method: :put do |f| %>
+        <%= f.input :quality_response, collection: 0..5, as: :radio_buttons, item_wrapper_class: 'inline', label: false, required: true %> 
+        <%= f.submit 'Submit', class: 'btn btn-primary', style: 'margin: 0 auto; display: block;' %>
+      <% end %>
+    </div>
   </div>
-</div>
-<button type="button" class="btn btn-primary">Check Answer</button>
 
-<div class="check_answer">
-
-  <h2>Answer:</h2>
-  <%= sanitize card.answer %>
-
-  <%= simple_form_for card, url: update_interval_path(card.id), method: :put do |f| %>
-    <%= f.input :quality_response, collection: 0..5, as: :radio_buttons, item_wrapper_class: 'inline', label: false, required: true %> 
-    <%= f.submit 'Submit', class: 'btn btn-primary' %>
-  <% end %>
-</div>
+</div><!-- devise_box -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
     var editor = ace.edit("editor");
     editor.setOptions({
-      maxLines: 100
+      maxLines: 100,
+      tabSize: 2,
+      useSoftTabs: true,
+      displayIndentGuides: true
     });
+    editor.setTheme("ace/theme/vibrant_ink");
+
     <% if card.question.include?("<code class='ruby'>") %>
       editor.session.setMode("ace/mode/ruby");
     <% elsif card.question.include?("<code class='javascript'>") %>
