--- a/app/views/study/index.html.erb
+++ b/app/views/study/index.html.erb
@@ -4,6 +4,6 @@
     <h3 class="text-center"><%= link_to '>> Go to lessons', courses_path %></h3>
   <% else %>
     <h1 class="text-center">TECHRISE Training Module</h1>
-    <%= render partial: 'cards/card', locals: { card: @cards.first } %>
+    <%= render partial: 'cards/card', locals: { card: @cards.first, cards: @cards } %>
   <% end %>
 </div>
