--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -36,10 +36,10 @@
                         </ul>
                     </div><!--//footer-col-inner-->            
                 </div><!--//foooter-col-->   
-                <div class="footer-col connect col-md-6 col-sm-12 col-xs-12">
+                <!-- <div class="footer-col connect col-md-6 col-sm-12 col-xs-12">
                     <div class="footer-col-inner">
                         <ul class="social list-inline">
-                            <li><a href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             <li><a href="#"><i class="fa fa-instagram"></i></a></li>        
@@ -53,9 +53,9 @@
                                 </div>   
                                 <button type="submit" class="btn btn-cta btn-cta-primary">Subscribe Now</button>                                 
                             </form>                               
-                        </div><!--//subscription-form-->
-                    </div><!--//footer-col-inner-->
-                </div><!--//foooter-col-->
+                        </div>
+                    </div>
+                </div> -->
                 <div class="clearfix"></div> 
             </div><!--//row-->
             <div class="row has-divider">
