--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -1,4 +1,4 @@
-<title>Techrise Nepal - Learn to Code</title>
+<title>Coding Bootcamp in Nepal| Techrise</title>
 
 <meta name="description" content="Learn how to code with interactive lessons and personal mentors at TECHRISE. Learn how to create web applications with HTML/CSS, Ruby on Rails, JavaScript, and other essential skills for all aspiring web developers and entrepreneurs.">
 
