--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -211,7 +211,7 @@
                   <!-- <div class = "why_techrise_icons"><i class="fa fa-globe"></i></div> -->
                   <h1>Build Real World Applications</h1>
                   <p style="text-align:justify; font-size:20px !important;">
-                    Instead of going just learning syntax and theory, we believe you can learn faster by actually building websites and web applications from day 1.
+                    Instead of just learning syntax and theory, we believe you can learn faster by actually building websites and web applications from day 1.
                   </p>
                 </div>
 
@@ -260,7 +260,7 @@
               <h5>Takehiro Mouri | Co-founder / Mentor</h5>
 
               <p style="font-size:16px;text-align:justify;">
-                Coding is awesome and my mission is to teach people how awesome it is. I work with a couple of start ups and help develop ideas into reality through web applications. I also won a few awards at a hackathon which was pretty fun. Other than coding, in my free time, I enjoy coding :) My favorite Nepalese food is Momo.
+                Coding is awesome and my mission is to teach people how much fun it can be. I've worked with multiple start ups as a lead developer have helped turn ideas into reality through software engineering. I'm super passionate about learning how to code and teaching others that are just beginning to do the same.
               </p>
 
               <a href="https://www.linkedin.com/in/takehiro-mouri-a3083487" target="_blank" class="pull-right"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
