--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -12,7 +12,7 @@
 
 	<%= render partial: 'course', locals: {course: 'Ruby Core Training', course_name: 'Strengthen your Ruby skills by going through various coding challenges. Sharpening your thinking skills is crucial in becoming a developer.', available: true, course_link: ruby_core_path, course_access: 'ruby_core'} %>
 
-	<%= render partial: 'course', locals: {course: 'Instapost - Share your photos online', course_name: 'Create a clone of the popular Instagram application. You are going to be creating a more complex app than before! Get excited!', available: false } %>
+	<%= render partial: 'course', locals: {course: 'Instapost - Share your photos online', course_name: 'Create a clone of the popular Instagram application. You are going to be creating a more complex app than before! Get excited!', available: true, course_link: instapost_path, course_access: 'instapost' } %>
 
 	<%= render partial: 'course', locals: {course: 'JavaScript/jQuery', course_name: 'With JavaScript, you can manipulate the web page in super fun ways.', available: false} %>
 
