--- a/app/views/instapost_lessons/lessons/lesson_11.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_11.html.erb
@@ -66,7 +66,7 @@ edit_user_registration GET        /users/edit(.:format)                       de
   Let's refactor our code to make this happen:
 </p>
 
-<pre><code class="ruby">
+<pre><code class="erb">
 &lt;nav&gt;
   &lt;% if user_signed_in? %&gt;
     &lt;%= link_to 'Log Out', destroy_user_session_path, method: :delete %&gt;
