--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -77,11 +77,10 @@
                             <span class="adr-group">       
                                 <span class="street-address">Remote Team</span><br>
                                 <span class="region">Nepal</span><br>
-                                <span class="postal-code">USA</span><br>
                                 <span class="country-name">Japan</span>
                             </span>
                         </p>
-                        <p class="tel"><i class="fa fa-phone"></i>+818061747394</p>
+                        <p class="tel"><i class="fa fa-phone"></i>+81 806 174 7394</p>
                         <p class="email"><i class="fa fa-envelope-o"></i><a href="#">contact@techrise.me</a></p> 
                         
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>                        
