--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -144,6 +144,38 @@
     </div>
   </section>
 
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <h2 class="section_header">Learn By Building</h2>
+          <p>
+            At TECHRISE, you'll build several projects and learn by building. We believe that in order to improve your technical skills, actually building real-world apps are the most effective way.
+          </p>
+        </div><!-- col-xs-12 col-md-6 -->
+        <div class="col-xs-12 col-md-6">
+          <%= image_tag 'landing_page/imac_lesson.png' %>
+        </div>
+
+      </div><!-- row -->
+
+      <div class="row" style="margin-top: 30px;">
+        <div class="col-xs-12 col-md-6">
+          <%= image_tag 'landing_page/slack_screenshot.png', style: 'width: 100%; border: 1px solid whitesmoke; border-radius: 3px; box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2);' %>
+        </div>
+
+        <div class="col-xs-12 col-md-6">
+          <h2 class="section_header">Learn With Peers</h2>
+          <p>
+            By asking questions, sharing comments, and learning from each other, you can accelerate your learning. Your path towards becoming a developer is shortened by having an environment where you can learn from your peers.
+          </p>
+        </div><!-- col-xs-12 col-md-6 -->
+        
+
+      </div><!-- row -->
+    </div><!-- container -->
+  </section>
+
   <!-- About Section -->
   <section class="our_story_section section" id="our_story">
     <div class="our_story_section_wrapper">
@@ -214,13 +246,6 @@
                     Instead of just learning syntax and theory, we believe you can learn faster by actually building websites and web applications from day 1.
                   </p>
                 </div>
-
-                <!-- <div class = "col-sm-12 col-md-4  text-center">
-                  <h1>Learn from People Like You</h1>
-                  <p style="text-align:justify">
-                    Our mentors were people just like you - beginners with no experience in coding - just until recently. That's why they know exactly how to go from having no experience in coding to becoming a great developer.
-                  </p>
-                </div> -->
 
               </div>
 
