--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,56 +2,85 @@
 </div><!--//headline-bg-->   
 
 <section class="story-section section section-on-bg">
-        <h2 class="title container text-center">Our story, our values</h2>
-        <div class="story-container container text-center"> 
-            <div class="story-container-inner" >                    
-                <div class="about">
-                    <p style="text-align: justify;"><span style="font-size: 25px;font-weight: 600;">Our story began when we fell in love with Nepal</span> and it’s beautiful people during our stay for a couple of months in 2015. We made lots of friends–friends who wanted to begin their own restaurant business, friends who wanted to create an environmentally friendly local community, friends who wanted a better future for themselves and those around them.
-                     </p>
+    <h2 class="title container text-center">Our story, our values</h2>
+    <div class="story-container container text-center"> 
+        <div class="story-container-inner" >                    
+            <div class="about">
+                <p style="text-align: justify;"><span style="font-size: 25px;font-weight: 600;">Our story began when we fell in love with Nepal</span> and it’s beautiful people during our stay for a couple of months in 2015. We made lots of friends–friends who wanted to begin their own restaurant business, friends who wanted to create an environmentally friendly local community, friends who wanted a better future for themselves and those around them.
+                 </p>
 
-                    <p style="text-align: justify;">
-                      We wanted to help them turn those dreams into reality. With Takehiro’s passion for coding, and Natsuko’s drive to create social impact, TECHRISE was born.
-                      We believe that teaching coding skills through TECHRISE can help our friends gain greater economic opportunities and fulfill their dreams.
-                    </p>        
-                </div><!--//about-->
-                <div class="team row">
-                    <h3 class="title">Meet the team</h3>
-                    <div class="member col-md-offset-2 col-md-4 col-sm-6 col-xs-12">
-                        <div class="member-inner">
-                            <figure class="profile">
-                                <%= image_tag 'natsuko.jpg', class: 'img-responsive', alt: 'Techrise Nepal Natsuko Robyn Shinozaki', style: 'height: 230px;' %>
-                                <figcaption class="info">
-                                    <span class="name">Natsuko Robyn Shinozaki</span>
-                                    <br />
-                                    <span class="job-title">Co-Founder</span>
-                                    
-                                </figcaption>
-                            </figure><!--//profile-->
-                            <div class="social">
-                                <ul class="social-list list-inline">
-                                    <li><a href="https://www.linkedin.com/in/robyn-natsuko-shinozaki-12883487"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                </ul><!--//social-list-->
-                            </div><!--//social-->
-                        </div><!--//member-inner-->
-                    </div><!--//member-->
-                    <div class="member col-md-4 col-sm-6 col-xs-12">
-                        <div class="member-inner">
-                            <figure class="profile">
-                                <%= image_tag 'take.jpg', class: 'img-responsive', alt: 'Techrise Nepal Takehiro Mouri' %>
-                                <figcaption class="info"><span class="name">Takehiro Mouri</span><br /><span class="job-title">Co-Founder</span></figcaption>
-                            </figure><!--//profile-->
-                            <div class="social">
-                                <ul class="social-list list-inline">
-                                    <li><a href="https://www.linkedin.com/in/takehiro-mouri-a3083487"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="https://twitter.com/TakehiroMouri"><i class="fa fa-twitter"></i></a></li>
-                                </ul><!--//social-list-->
-                            </div><!--//social-->
-                        </div><!--//member-inner-->
-                    </div><!--//member-->
-                   
-                </div><!--//team-->
+                <p style="text-align: justify;">
+                  We wanted to help them turn those dreams into reality. With Takehiro’s passion for coding, and Natsuko’s drive to create social impact, TECHRISE was born.
+                  We believe that teaching coding skills through TECHRISE can help our friends gain greater economic opportunities and fulfill their dreams.
+                </p> 
+
+                <div class="col-xs-12 text-center">
+                    <blockquote class="belife">
+                        This is our way of sharing happiness.<br>
+                        One line of code at a time.<br>
+                        <small>TECHRISE team</small>
+                    </blockquote>
+                </div>       
+            </div><!--//about-->
+            <div class="team row">
+                <h3 class="title">Meet the team</h3>
+                <div class="member col-md-offset-2 col-md-4 col-sm-6 col-xs-12">
+                    <div class="member-inner">
+                        <figure class="profile">
+                            <%= image_tag 'natsuko.jpg', class: 'img-responsive', alt: 'Techrise Nepal Natsuko Robyn Shinozaki', style: 'height: 230px;' %>
+                            <figcaption class="info">
+                                <span class="name">Natsuko Robyn Shinozaki</span>
+                                <br />
+                                <span class="job-title">Co-Founder</span>
+                                
+                            </figcaption>
+                        </figure><!--//profile-->
+                        <div class="social">
+                            <ul class="social-list list-inline">
+                                <li><a href="https://www.linkedin.com/in/robyn-natsuko-shinozaki-12883487"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            </ul><!--//social-list-->
+                        </div><!--//social-->
+                    </div><!--//member-inner-->
+                </div><!--//member-->
+                <div class="member col-md-4 col-sm-6 col-xs-12">
+                    <div class="member-inner">
+                        <figure class="profile">
+                            <%= image_tag 'take.jpg', class: 'img-responsive', alt: 'Techrise Nepal Takehiro Mouri' %>
+                            <figcaption class="info"><span class="name">Takehiro Mouri</span><br /><span class="job-title">Co-Founder</span></figcaption>
+                        </figure><!--//profile-->
+                        <div class="social">
+                            <ul class="social-list list-inline">
+                                <li><a href="https://www.linkedin.com/in/takehiro-mouri-a3083487"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://twitter.com/TakehiroMouri"><i class="fa fa-twitter"></i></a></li>
+                            </ul><!--//social-list-->
+                        </div><!--//social-->
+                    </div><!--//member-inner-->
+                </div><!--//member-->
+
+            </div><!--//team-->
+
+            <div class="founders">
+                <hr class="clear">
+                <h2 class="text-center title" style="color:black;">About the Founders</h2>
+                <h3>Natsuko Robyn Shinozaki</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <h3>Takehiro Mouri</h3>
+                <p>
+                    Takehiro is passionate about teaching and learning. He now works as the lead engineer at äLuxuRē, a startup located in North Carolina. Takehiro also has experience working as a software engineer for multiple startups. Takehiro is a graduate of The Firehose Project, a 15 week intensive web development training course, which inspired him and Natsuko to start TECHRISE. Multiple category winner at HackNC, one of the largest student based hackathons in the US, awarded the “Best Use of IBM Bluemix Technology Award”, “Best Use of Interactive Intelligence Award”, and “Most Startup Worthy Award”. Awarded 1st prize at the Hong Kong Cup All Japan University Student Ambassadors English Program 2014-2015. Awarded 1st prize at the 40th All Japan Youth English Oratorical Contest for the Mayor of Honolulu. Speaker at TEDxTokyoTeachers. Experience working as a freelancer, providing localization services to more than 10 major Japanese corporations and organizations. Main projects include the Mitsubishi Corporation Relations Committee 50th Anniversary Commemorative and the Shizuoka City Tourism Website.
+                </p>
                 
-            </div><!--//story-container--> 
-        </div><!--//container-->
-    </section><!--//story-video-->
+            </diV>
+            
+        </div><!--//story-container--> 
+    </div><!--//container-->
+</section><!--//story-video-->
+
+<br>
