--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,19 +6,19 @@
                     <div class="footer-col-inner">
                         <h3 class="title">About us</h3>
                         <ul class="list-unstyled">
-                            <li><a href="#team"><i class="fa fa-caret-right"></i>Who we are</a></li>
+                            <li><a href="/about"><i class="fa fa-caret-right"></i>Who we are</a></li>
 <!--                             <li><a href="#"><i class="fa fa-caret-right"></i>Press</a></li>
                             <li><a href="#"><i class="fa fa-caret-right"></i>Blog</a></li>
                             <li><a href="#"><i class="fa fa-caret-right"></i>Jobs</a></li> -->
-                            <li><a href="#contact"><i class="fa fa-caret-right"></i>Contact us</a></li>
+                            <li><a href="/contact_us"><i class="fa fa-caret-right"></i>Contact us</a></li>
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//foooter-col-->    
                 <div class="footer-col links col-md-2 col-sm-4 col-xs-12">
                     <div class="footer-col-inner">
-                        <h3 class="title">Course</h3>
+                        <h3 class="title">Curriculum</h3>
                         <ul class="list-unstyled">
-                            <li><a href="#skills"><i class="fa fa-caret-right"></i>Skills</a></li>
+                            <li><a href="/learn"><i class="fa fa-caret-right"></i>Learn More</a></li>
                             <li><a href="#why_techrise"><i class="fa fa-caret-right"></i>Why Techrise</a></li>
 <!--                             <li><a href="#"><i class="fa fa-caret-right"></i>Download Apps</a></li>
                             <li><a href="#"><i class="fa fa-caret-right"></i>Pricing</a></li> -->
