--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -34,27 +34,27 @@
                 <% else %>
 
                     <li class="nav-item page-scroll">
-                      <a href="/#skills_you_will_learn">Skills</a>
+                      <a href="/learn">Learn More</a>
                     </li>
 
-                    <li class="nav-item page-scroll">
+<!--                     <li class="nav-item page-scroll">
                       <a href="/#is_techrise_for_me">Goals</a>
-                    </li>
+                    </li> -->
 
-                    <li class="nav-item page-scroll">
+<!--                     <li class="nav-item page-scroll">
                       <a href="/#our_story">Our Story</a>
                     </li>
 
                     <li class="nav-item page-scroll">
                       <a href="/#why_us">Why Techrise</a>
+                    </li> -->
+
+                    <li class="nav-item page-scroll">
+                      <a href="/about">About</a>
                     </li>
 
                     <li class="nav-item page-scroll">
-                      <a href="/#team">Team</a>
-                    </li>
-
-                    <li class="nav-item page-scroll">
-                      <a href="/#contact_us">Contact Us</a>
+                      <a href="/contact_us">Contact Us</a>
                     </li>
 
                 <% end %>          
