--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,3 +1,15 @@
+#slider {
+  padding-right: 50px;
+}
+
+.handle {
+  position: fixed;
+  width: 50px;
+  height: 100%;
+  right: 0px;
+}
+
 .check_answer {
   display: none;
 }
+
