--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -281,12 +281,12 @@
           <div id="testimonials-carousel" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
                   <li data-target="#testimonials-carousel" data-slide-to="0" class="active"></li>
-<!--                   <li data-target="#testimonials-carousel" data-slide-to="1"></li>
-                  <li data-target="#testimonials-carousel" data-slide-to="2"></li> -->
+                  <li data-target="#testimonials-carousel" data-slide-to="1"></li>
+                  <!-- <li data-target="#testimonials-carousel" data-slide-to="2"></li> -->
               </ol><!--//carousel-indicators-->
               <div class="carousel-inner">
                   <div class="item active">
-                      <figure class="profile"><%= image_tag 'landing_page/aadesh.jpg', class: 'prof_pic' %></figure>
+                      <figure class="profile"><%= image_tag 'landing_page/aadesh.jpg' %></figure>
                       <div class="content">
                           <blockquote>
                           <i class="fa fa-quote-left"></i>
@@ -295,6 +295,19 @@
                           </p>
                           </blockquote>
                           <p class="source">Aadesh Shrestha<br /><span class="title">Software Engineer, äLuxuRē</span></p>
+                      </div><!--//content-->                         
+                  </div><!--//item-->         
+                  <div class="item">
+                      <figure class="profile"><%= image_tag 'landing_page/ganesh.jpg' %></figure>
+                      <div class="content">
+                          <blockquote>
+                          <i class="fa fa-quote-left"></i>
+                          <p>
+                            Its my great pleasure to know that TECHRISE is launching a special skill development IT program specially for Nepali youth. Definately it will help to develop the skill manpower and provide a great employment opportunity abroad. Since the education system of Nepal is being a theoretical base, even after graduation in concern faculty, could not fit for the international labour markets. As per present scenario, more than 6,000,000 Nepalese unskilled workers are working abroad as a labourer. If we could able to train them as skilled manpower, it will definitely help Nepal's national economy. I, therefore wish all the success of TECHRISE and would like to extend my sincere thanks to co-founders of TECHRISE.
+                          </p>
+
+                          </blockquote>
+                          <p class="source">Ganesh Man Lama<br /><span class="title">Air Asia X Nepal President | Managing Director Incentive Group of Companies</span></p>
                       </div><!--//content-->                         
                   </div><!--//item-->                        
                   
