--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -742,6 +742,7 @@ select {
   padding-left: 210px;
   padding-top: 0px;
   padding-bottom: 0px;
+  height: 300px;
 }
 .testimonials .item blockquote {
   font-size: 20px;
@@ -3037,6 +3038,7 @@ select {
     text-align: center;
     margin-bottom: 30px;
   }
+
   .testimonials .item .content {
     padding-left: 60px;
   }
