--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,15 @@
     <div class="container">
       <div class = "content">
 
-        <% if notice.present? %>
-          <p class="alert alert-info"><%= notice %></p>
-        <% end %>
-        <% if alert.present? %>
-          <p class="alert alert-danger"><%= alert %></p>
-        <% end %>
-
+        <div id="flash">
+          <% if notice.present? %>
+            <p class="alert alert-info"><%= notice %></p>
+          <% end %>
+          <% if alert.present? %>
+            <p class="alert alert-danger"><%= alert %></p>
+          <% end %>
+        </div>
+        
         <%= yield %>
 
       </div>
