--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,7 +12,7 @@
         <header class="header header-blog">  
             <div class="container">       
                 <h1 class="logo" style="padding-top: 22px;">
-                    <a href="/"><span class="text" style="font-size: 25px;color: #EC6952;font-family:'Titillium Web', sans-serif;">TECHRISE</span> <span class="sub">Blog</span> </a>
+                    <a href="/blog"><span class="text" style="font-size: 25px;color: #EC6952;font-family:'Titillium Web', sans-serif;">TECHRISE</span> <span class="sub">Blog</span> </a>
                 </h1><!--//logo-->
                 <nav class="main-nav navbar-right" role="navigation">
                     <div class="navbar-header">
