--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -282,21 +282,9 @@
               <ol class="carousel-indicators">
                   <li data-target="#testimonials-carousel" data-slide-to="0" class="active"></li>
                   <li data-target="#testimonials-carousel" data-slide-to="1"></li>
-                  <!-- <li data-target="#testimonials-carousel" data-slide-to="2"></li> -->
+                  <li data-target="#testimonials-carousel" data-slide-to="2"></li>
               </ol><!--//carousel-indicators-->
               <div class="carousel-inner">
-                  <div class="item active">
-                      <figure class="profile"><%= image_tag 'landing_page/aadesh.jpg' %></figure>
-                      <div class="content">
-                          <blockquote>
-                          <i class="fa fa-quote-left"></i>
-                          <p>
-                            TECHRISE has been by far the best learning experience for me. My mentor, Takehiro, was very helpful during the course. He is very passionate when it comes to teaching, always willing to explain the concepts behind what we were doing. Having that understanding makes it possible to apply that knowledge in different places. These 3 months have been challenging but worth it.
-                          </p>
-                          </blockquote>
-                          <p class="source">Aadesh Shrestha<br /><span class="title">Software Engineer, äLuxuRē</span></p>
-                      </div><!--//content-->                         
-                  </div><!--//item-->         
                   <div class="item">
                       <figure class="profile"><%= image_tag 'landing_page/ganesh.jpg' %></figure>
                       <div class="content">
@@ -309,7 +297,33 @@
                           </blockquote>
                           <p class="source">Ganesh Man Lama<br /><span class="title">Air Asia X Nepal President | Managing Director Incentive Group of Companies</span></p>
                       </div><!--//content-->                         
-                  </div><!--//item-->                        
+                  </div><!--//item-->
+
+                  <div class="item active">
+                      <figure class="profile"><%= image_tag 'landing_page/aadesh.jpg' %></figure>
+                      <div class="content">
+                          <blockquote>
+                          <i class="fa fa-quote-left"></i>
+                          <p>
+                            TECHRISE has been by far the best learning experience for me. My mentor, Takehiro, was very helpful during the course. He is very passionate when it comes to teaching, always willing to explain the concepts behind what we were doing. Having that understanding makes it possible to apply that knowledge in different places. These 3 months have been challenging but worth it.
+                          </p>
+                          </blockquote>
+                          <p class="source">Aadesh Shrestha<br /><span class="title">Software Engineer, äLuxuRē</span></p>
+                      </div><!--//content-->                         
+                  </div><!--//item-->  
+
+                  <div class="item">
+                      <figure class="profile"><%= image_tag 'landing_page/lakshman.jpg' %></figure>
+                      <div class="content">
+                          <blockquote>
+                          <i class="fa fa-quote-left"></i>
+                          <p>
+                            The way the lessons have been simplified makes it very easy to understand.
+                          </p>
+                          </blockquote>
+                          <p class="source">Lakshman Basnet<br /><span class="title">Computer & Information Sciences Student at Tribhuvan University</span></p>
+                      </div><!--//content-->                         
+                  </div><!--//item-->                         
                   
               </div><!--//carousel-inner-->
               
