--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -318,7 +318,7 @@
                           <blockquote>
                           <i class="fa fa-quote-left"></i>
                           <p>
-                            The way the lessons have been simplified makes it very easy to understand.
+                            I was lost and was trying many courses on the internet. After joining Techrise, I got courses of my preference and suitable to the current market. Weekly mentor sessions, well presented, tested and clearly explained lessons and assignments' reviews were the best part learning here. Asking a lot of questions to my mentor, and discussing with other members in Slack enhanced fast understanding. Thank you TECHRISE for helping me build  skills to make great apps.
                           </p>
                           </blockquote>
                           <p class="source">Lakshman Basnet<br /><span class="title">Computer & Information Sciences Student at Tribhuvan University</span></p>
